fix star alignment

--- a/trip-home/src/scenes/Map/components/styles/map.css
+++ b/trip-home/src/scenes/Map/components/styles/map.css
@@ -13,17 +13,15 @@
   .starContainer {
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    justify-items: center;
-    align-items: flex-end;
+    align-items: center;
     font-size: 18px;
     
   }
 
   .star {
-    padding: .5em
+    padding-bottom: 4px;
   }
 
   .rating {
-    padding: .5em
+    padding: .5em;
   }
